<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_30391915_2999327593676074_2844663180157052033_n"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/AHGZLY_CINEMA"
            android:textColor="#010830"
            android:textSize="34sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/loginUserMailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/USER_MAIL"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/loginUserMaleInput"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:autofillHints="Email"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFEFE"
            android:layout_marginTop="20dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textSize="30sp"
            tools:ignore="DuplicateClickableBoundsCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/loginPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/PASSWORD"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:autofillHints="Password"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:hint="@string/PASSWORD"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/guestRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onToggle"
                android:text="@string/GUEST"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/adminRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:onClick="onToggle"
                android:text="@string/ADMIN"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/loginRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CD1313"
            android:text="@string/login"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registerRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00FFFFFF"
            android:text="@string/register"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>